--- a/example/src/Containers/DocumentationListContainer/Component/DocumentationList.css
+++ b/example/src/Containers/DocumentationListContainer/Component/DocumentationList.css
@@ -21,3 +21,14 @@
 .rbc-documentation-table-row:nth-child(odd) {
     background-color: #f2f2f2;
 }
+
+.rbc-documentation-form-meta-structure {
+    /* padding: 16px; */
+}
+
+.rbc-documentation-form-meta-structure-heading {
+    font-size: 18px;
+    line-height: 21px;
+
+    margin: 16px 0px;
+}
