--- a/src/Components/Modal/index.css
+++ b/src/Components/Modal/index.css
@@ -1,8 +1,8 @@
 /* Modal Content */
 .rbc-modal {
   position: fixed; /* Stay in place */
-  z-index: 109; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  z-index: 99999; /* Sit on top */
+  padding-top: 96px; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -30,14 +30,14 @@
   padding: 0;
   /* border: 1px solid #888; */
   border-radius: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 2px 2px 4px 0 rgba(51, 51, 51, 0.25);
   
   -webkit-animation-name: animateTop;
   -webkit-animation-duration: 0.5s;
   animation-name: animateTop;
   animation-duration: 0.5s;
 
-  padding: 10px;
+  padding: 16px;
 }
 
 /* Add Animation */
@@ -85,17 +85,17 @@
 
 /* Modal Header */
 .rbc-modal-header {
-  padding: 10px;
+  padding: 8px;
 }
 
 /* Modal Body */
 .rbc-modal-body {
-  padding: 10px;
+  padding: 8px;
 }
 
 /* Modal Footer */
 .rbc-modal-footer {
-  padding: 10px;
+  padding: 8px;
 }
 
 .rbc-modal-close {
@@ -104,7 +104,7 @@
   float: right;
   font-size: 24px;
   font-weight: bold;
-  right: 7px;
+  right: 8px;
   top: -2px;
 }
 
