--- a/src/Containers/TabComponent/Component/Tab.css
+++ b/src/Containers/TabComponent/Component/Tab.css
@@ -1,8 +1,8 @@
 
 .rbc-tab {
-    
+    display: inline-flex;
 }
 
-.rbc-carousel-element {
-    
+.rbc-tab-selected {
+    border-bottom: 2px solid #2f80ed;
 }
