--- a/src/Theme/styles/components/_modal.scss
+++ b/src/Theme/styles/components/_modal.scss
@@ -1,13 +1,13 @@
 /* Modal Content */
 .rbc-modal {
-  position: fixed; /* Stay in place */
-  z-index: 99999; /* Sit on top */
-  padding-top: 96px; /* Location of the box */
+  position: fixed;
+  z-index: 99999; 
+  padding-top: 96px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto;
 
   -webkit-animation-name: fade;
   -webkit-animation-duration: 0.5s;
@@ -31,7 +31,7 @@
   /* border: 1px solid #888; */
   border-radius: 2px;
   box-shadow: 2px 2px 4px 0 rgba(51, 51, 51, 0.25);
-  
+
   -webkit-animation-name: animateTop;
   -webkit-animation-duration: 0.5s;
   animation-name: animateTop;
